# weekly-retrospective

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/workflows/: deploy.yml
src/: main.py
src/core/: config.py
src/util/: __init__.py  github.py  slack.py
