[tool.poetry]
name = "weekly-retrospective"
version = "1"
description = "Ready Techie 회고"
authors = ["Ready Techie", "<>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
slack-sdk = "^3.15.1"
pydantic = "^1.9.0"
python-dotenv = "^0.19.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
isort = "^5.10.1"
black = "^22.1.0"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
